--- a/1.标签.md
+++ b/1.标签.md
@@ -13,21 +13,15 @@
 `<link rel='shortcut icon href='''></link>`
 
 #### 标签++
-1.图文组合
-```
-<figure>
-  <img>
-  <figcapion>描述文字</figcapion>
-</figure>
-````
-2.hr水平线
-3.`<menu>` 标签用于上下文菜单、工具栏以及用于列出表单控件和命令 目前所有浏览器都不支持 H5重新定义
-4.`<meter value="0.6">60%</meter>` 进度条，H5
-5.`<nav></nav>` 导航,H5
-6.`<progress></progress>` 来回滚动的进度条
-7.` <time datetime="2010-02-14">情人节</time>` 该元素能够以机器可读的方式对日期和时间进行编码，这样，举例说，用户代理能够把生日提醒或排定的事件添加到用户日程表中，搜索引擎也能够生成更智能的搜索结果,H5,目前没有浏览器支持
+1. 图文组合  `<figure> <img> <figcapion>描述文字</figcapion></figure>`
+2. hr水平线
+3. `<menu>` 标签用于上下文菜单、工具栏以及用于列出表单控件和命令 目前所有浏览器都不支持 H5重新定义
+4. `<meter value="0.6">60%</meter>` 进度条，H5
+5. `<nav></nav>` 导航,H5
+6. `<progress></progress>` 来回滚动的进度条
+7. ` <time datetime="2010-02-14">情人节</time>` 该元素能够以机器可读的方式对日期和时间进行编码，这样，举例说，用户代理能够把生日提醒或排定的事件添加到用户日程表中，搜索引擎也能够生成更智能的搜索结果,H5,目前没有浏览器支持
 
 #### 标签分类
-1.块级元素:独占一行
-2.行内元素:按内容占大小，占一行，行内元素不能套块元素(a标签除外)
-3.行内块元素:img input
+1. 块级元素:独占一行
+2. 行内元素:按内容占大小，占一行，行内元素不能套块元素(a标签除外)
+3. 行内块元素:img input
