--- a/2.css.md
+++ b/2.css.md
@@ -10,3 +10,11 @@
 2. 类选择器 `.red {}`,权重为10
 3. id选择器 `#id {}`,权重为100
 4. 通配符选择器 `* {}`,去掉一些默认的样式，权重小于1
+5. 并集选择器 `div,p,h3{}` 样式相同的写在一起
+6. 交集选择器 `p.classname{}` 有classnam的p标签才有的属性，在class或者id前面加上标签名，来精确查找
+7. 后代选择器 `.pic ol li {list-style: none}` ol下的li标签，用空格隔开表示子代，所有的后代都算进去的，嵌套的层级不要超过三层
+8. 子代选择器 `h1 > strong` 只能是自己的子代才能被选中
+9. 相邻兄弟选择器 `li+li {}` 下一个兄弟节点，一定是紧挨着的;`li~li {}`所有的兄弟节点，CSS3新增
+10. 属性选择器 `[title]{}`给所有有title属性的标签加上样式  `[title="abc"]{}`给title=abc的加上样式，`[title^="abc"]{已abc开头的}`,`[title$="abc"]{已abc结尾的}`,`[title*="abc"]{属性值中包含abc子串的}`,`[calss~"abc"]{有abc这个类名的}`
+11. 伪类选择器 `a:link a:visited a:hover a:active｛按下没松开｝ 元素的:active :focus :hover :link{没有访问之前的样式text-decoration:none} :visited{已经访问过} :first-child :lang` 10<权重<11
+12. CSS新增部分特殊伪类选择器，`ul li:not(last-child){}`除了最后一个元素 `ul li:nth-child()odd{}`偶数的样式 `ul li :nth-child(even){}`基数的样式，`ul li:nth-last-child(1){}`倒数第几个元素，`p:first-of-type{}` 同类型中第一个同级兄弟元素，`nth-of-type(2){}`第二个同类型同级兄弟元素 `:checked{} :empty{}`,`:first-letter{向文本的第一个字母} :first-line{文本第一行} :before{} :after{}`
