--- a/2.css.md
+++ b/2.css.md
@@ -5,16 +5,20 @@
 3. link引入:当一个页面被加载的时候，link引入的css会被同时加载，能被js控制
 4. @import引入:style标签或者css样式表中,并且写在最上面 `@import './css/index.css'` 这种方式引入的css,会在页面被完全下载完成后再加载，不能被js控制
 
-#### css选择器
+#### css选择器，按权重大小显示，相同权重下面的覆盖上面的
 1. 标签选择器 `div {}`,权重为1
 2. 类选择器 `.red {}`,权重为10
 3. id选择器 `#id {}`,权重为100
-4. 通配符选择器 `* {}`,去掉一些默认的样式，权重小于1
-5. 并集选择器 `div,p,h3{}` 样式相同的写在一起
-6. 交集选择器 `p.classname{}` 有classnam的p标签才有的属性，在class或者id前面加上标签名，来精确查找
-7. 后代选择器 `.pic ol li {list-style: none}` ol下的li标签，用空格隔开表示子代，所有的后代都算进去的，嵌套的层级不要超过三层
-8. 子代选择器 `h1 > strong` 只能是自己的子代才能被选中
+4. 通配符选择器 `* {}`,去掉一些默认的样式,权重小于1
+5. 并集选择器 `div,p,h3{}` 样式相同的写在一起,这种选择器的权重是各个权重之和
+6. 交集选择器 `p.classname{}` 有classnam的p标签才有的属性，在class或者id前面加上标签名，来精确查找,权重 10+1
+7. 后代选择器 `.pic ol li {list-style: none}` ol下的li标签，用空格隔开表示子代，所有的后代都算进去的，嵌套的层级不要超过三层,权重:10 + 1 + 1
+8. 子代选择器 `h1 > strong` 只能是自己的子代才能被选中，权重 1 + 1
 9. 相邻兄弟选择器 `li+li {}` 下一个兄弟节点，一定是紧挨着的;`li~li {}`所有的兄弟节点，CSS3新增
 10. 属性选择器 `[title]{}`给所有有title属性的标签加上样式  `[title="abc"]{}`给title=abc的加上样式，`[title^="abc"]{已abc开头的}`,`[title$="abc"]{已abc结尾的}`,`[title*="abc"]{属性值中包含abc子串的}`,`[calss~"abc"]{有abc这个类名的}`
 11. 伪类选择器 `a:link a:visited a:hover a:active｛按下没松开｝ 元素的:active :focus :hover :link{没有访问之前的样式text-decoration:none} :visited{已经访问过} :first-child :lang` 10<权重<11
 12. CSS新增部分特殊伪类选择器，`ul li:not(last-child){}`除了最后一个元素 `ul li:nth-child()odd{}`偶数的样式 `ul li :nth-child(even){}`基数的样式，`ul li:nth-last-child(1){}`倒数第几个元素，`p:first-of-type{}` 同类型中第一个同级兄弟元素，`nth-of-type(2){}`第二个同类型同级兄弟元素 `:checked{} :empty{}`,`:first-letter{向文本的第一个字母} :first-line{文本第一行} :before{} :after{}`
+
+#### 属性继承性
+1. 不可继承: display 文本属性：`vertical-align,text-decoration, text-shadow,white-space,unicode-bidi` 盒子模型的属性:`width,height,border,margin,padding等` 背景属性: `background` 定位属性: `float,clear,position等` 生成内容属性: `content counter-reset counter-increment` 轮廓样式属性: `outline-style, outline-width, outline-color, outline` 页面样式属性:`size,page-break-before,page-break-after` 声音样式属性: `pause-before pause-after pause cue-before cue-after cue play-during`
+2. 可继承属性: 字体系列属性，文本系列属性:`text-indent,text-align,line-height,word-spacing,letter-spacing,text-transform,direction,`,元素可见性：`visibility`, 表格布局属性:`caption-side,border-collapse,border-spacing,empty-cells,table-layout`,列表布局属性:`list-style-type,list-style-image,list-style-position,list-style`,生成内容属性:`quotes`,光标属性:`cursor`,页面样式属性:`page,page-break-inside, windows, orphans`,声音样式属性:`speak,speak-punctuation,speak-numeral,speak-header,speech-rate,volume,voice-family,pitch,pitch-range,stress,richness`
