--- a/2.css.md
+++ b/2.css.md
@@ -22,3 +22,12 @@
 #### 属性继承性
 1. 不可继承: display 文本属性：`vertical-align,text-decoration, text-shadow,white-space,unicode-bidi` 盒子模型的属性:`width,height,border,margin,padding等` 背景属性: `background` 定位属性: `float,clear,position等` 生成内容属性: `content counter-reset counter-increment` 轮廓样式属性: `outline-style, outline-width, outline-color, outline` 页面样式属性:`size,page-break-before,page-break-after` 声音样式属性: `pause-before pause-after pause cue-before cue-after cue play-during`
 2. 可继承属性: 字体系列属性，文本系列属性:`text-indent,text-align,line-height,word-spacing,letter-spacing,text-transform,direction,`,元素可见性：`visibility`, 表格布局属性:`caption-side,border-collapse,border-spacing,empty-cells,table-layout`,列表布局属性:`list-style-type,list-style-image,list-style-position,list-style`,生成内容属性:`quotes`,光标属性:`cursor`,页面样式属性:`page,page-break-inside, windows, orphans`,声音样式属性:`speak,speak-punctuation,speak-numeral,speak-header,speech-rate,volume,voice-family,pitch,pitch-range,stress,richness`
+
+#### border小技巧
+1. 使用border绘制三角形，`｛border-width: 100px; border-style: solid; border-color: red transparent transparent transparent｝`
+2. 使用border绘制箭头，使用左上border加旋转
+
+#### margin技巧
+1. margin融合，取较大的margin
+2. margin兼容问题，大盒子内部的小盒子加margin的时候，2个盒子都加上了距离，解决办法:(1)父元素加`overflow：hidden` (2)父元素加上padding (3)父元素加border (4)内层元素的margin改为父元素的padding
+3. margin负值，改变元素的位置
