--- a/2.css.md
+++ b/2.css.md
@@ -31,3 +31,13 @@
 1. margin融合，取较大的margin
 2. margin兼容问题，大盒子内部的小盒子加margin的时候，2个盒子都加上了距离，解决办法:(1)父元素加`overflow：hidden` (2)父元素加上padding (3)父元素加border (4)内层元素的margin改为父元素的padding
 3. margin负值，改变元素的位置
+
+#### background
+1. background-repeat: 默认x/y两个方向平铺，可选值为repeat,repeat-x,repeat-y,no-repeat
+2. background-color,background-image可以简写成background
+3. background-position: 50px 60px; 水平50px，纵轴方向50px，50% 50%相当于center center， left 第二个值默认为center。可选值为：px % （top, bottom, left, right, center）inherit(从父级继承)
+4. background-attachment: 设置背景是否固定或者随着其余部分滚动。scroll: 背景随页面滚动而滚动，默认。fixed: 背景图片固定。inherit： 继承自父级
+5. background-size: 可选值为 length:具体值，percentage:使用百分比指定背景图的大小，auto: 背景图的真实大小，cover: 背景图等比缩放到完全覆盖容器，x和y轴完全接触到边， contain：背景图缩放到完全合适在容器中，x或y接触到边 css3
+6. background-clip: 背景裁剪，截取一部分，会把原图剪切，可选值为content-box，只保留content-box；padding-box: 保留content和padding； border-box:全部保留 css3
+7. background-origin: 设置背景图像的参考原点,背景的显示原点坐标，左上角。可选值有content-box:从内容区域开始显示，border-box: 原点从border开始显示，padding-box:padding开始显示 css3
+8. background复合写法，background: background-color background-image background-repeat(默认两个方向平铺) background-position background-attachment
