--- a/2.css.md
+++ b/2.css.md
@@ -41,3 +41,17 @@
 6. background-clip: 背景裁剪，截取一部分，会把原图剪切，可选值为content-box，只保留content-box；padding-box: 保留content和padding； border-box:全部保留 css3
 7. background-origin: 设置背景图像的参考原点,背景的显示原点坐标，左上角。可选值有content-box:从内容区域开始显示，border-box: 原点从border开始显示，padding-box:padding开始显示 css3
 8. background复合写法，background: background-color background-image background-repeat(默认两个方向平铺) background-position background-attachment
+
+#### 一些技巧
+1. overflow:hidden 溢出隐藏，清浮动(父元素添加这个)，解决margin-top的传递问题(父元素添加这个)
+2. IE7以下兼容display：inline-block `{ display: inline-block; *display:inline; *zoom:1 }`
+3. 多行文本出现省略号，`{ display: -webkit-box;弹性盒模型 -webkit-box-orient: vertical; 元素的排列方式 -webkit-line-clamp: 2； 文字的行数 over-flow:hidden;}` 2行文本，超过的地方显示点点点
+
+#### 浮动
+1. 让元素在一行显示
+2. 浮动元素会脱离文档流，下面的不浮动的元素，会往上跑，占领浮动元素的位置
+3. 父元素浮动，子元素不会继承浮动
+4. 浮动元素具有块级元素的属性
+
+#### 文档流和脱离文档流
+1. 文档流：元素在排版的过程中，元素会自动从左往右，从上往下的流式排列。
