添加定位和文档流相关知识
添加定位和文档流相关知识

--- a/2.css.md
+++ b/2.css.md
@@ -52,6 +52,19 @@
 2. 浮动元素会脱离文档流，下面的不浮动的元素，会往上跑，占领浮动元素的位置
 3. 父元素浮动，子元素不会继承浮动
 4. 浮动元素具有块级元素的属性
+5. 浮动元素会导致父元素高度塌陷
+6. 清除浮动：(1)给父级元素添加高度(2)父级元素添加overflow:hidden(3)浮动元素后面添加一个块级元素带有clear:both(4)父元素的after`{ display: block; clear:both;content: '' }` 父元素加上`｛ *zoom:1 ｝`兼容ie7
+
+#### position
+1. absolute，绝对定位，会让元素脱离文档流，寻找相对参照物(position:relative，absolute，fixed)，没有的话，就是相对html进行绝对定位.优先取top和left的值。z-index可以用
+2. relative：相对定位，不会脱离文档流，即使设置了left.top.right.bottom,在文档流中的占位是不动的，参照物是自己本身的位置。z-index可以用
+3. fixed：相对视口定位，脱离文档流，参照物是浏览器窗口
 
 #### 文档流和脱离文档流
-1. 文档流：元素在排版的过程中，元素会自动从左往右，从上往下的流式排列。
+1. 文档流：元素在排版的过程中，元素会自动从左往右，从上往下的流式排列
+2. 脱离文档流：文档内的正常元素识别不了这个元素(脱离文档流的元素相当于平行漂浮在文档流上)
+
+#### z-index
+1. z-index默认是0，同样的z-index,写在后面的会在前面
+2. z-index是同级元素的比较，父子元素的z-index不起作用
+3. 父元素之间没有z-index，就用子元素的z-index进行比较
